--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-   # destination: /var/www/html/18march
+    destination: /var/www/html/20march
     overwrite: true
 file_exists_behavior: OVERWRITE
 hooks:
