--- a/appspec.yml
+++ b/appspec.yml
@@ -15,3 +15,7 @@ hooks:
     - location: scripts/after_install.sh
       timeout: 300
       runas: root
+ ApplicationStart:
+    - location: scripts/application_start.sh
+      timeout: 300
+      runas: root
