--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,6 +31,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ navendu2 }}
+          password: ${{ Navendu@00 }}
+
+      - name: Build Docker image
+        run: |
+          docker build -t your-dockerhub-navendu2/myfrontendimage:${{ github.sha }} .
+
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push your-dockerhub-navendu2/myfrontendimage:${{ github.sha }}
+
       - name: chmod
         run: chmod -R +x  scripts/*
 
