--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,16 +34,20 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ navendu2 }}
-          password: ${{ Navendu@00 }}
+         username: ${{ secrets.DOCKERHUB_USERNAME }}
+   
 
       - name: Build Docker image
         run: |
-          docker build -t your-dockerhub-navendu2/myfrontendimage:${{ github.sha }} .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/easyvsl-stage:${{ steps.version.outputs.tag }} .
 
-      - name: Push Docker image to Docker Hub
+      - name: Login to Docker Hub
         run: |
-          docker push your-dockerhub-navendu2/myfrontendimage:${{ github.sha }}
+          echo "Docker Hub username: ${{ secrets.DOCKER_USERNAME }}"
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/easyvsl-stage:${{ steps.version.outputs.tag }}
 
       - name: chmod
         run: chmod -R +x  scripts/*
