--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,15 +31,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-         username: ${{ secrets.DOCKERHUB_USERNAME }}
-   
+      - name: Generate unique Docker image tag
+        id: version
+        run: echo "::set-output name=tag::$(echo ${{ github.run_id }})"
+    
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/easyvsl-stage:${{ steps.version.outputs.tag }} .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/frontendimage:${{ steps.version.outputs.tag }} .
 
       - name: Login to Docker Hub
         run: |
