--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/frontendimage:${{ steps.version.outputs.tag }} .
-
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/easyvsl-stage:${{ steps.version.outputs.tag }} .
+          
       - name: Login to Docker Hub
         run: |
           echo "Docker Hub username: ${{ secrets.DOCKER_USERNAME }}"
