--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/easyvsl-stage:${{ steps.version.outputs.tag }} .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/frontendimage:${{ steps.version.outputs.tag }} .
           
       - name: Login to Docker Hub
         run: |
@@ -46,7 +46,7 @@ jobs:
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/easyvsl-stage:${{ steps.version.outputs.tag }}
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/frontendimage:${{ steps.version.outputs.tag }}
 
       - name: chmod
         run: chmod -R +x  scripts/*
