--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,20 +29,19 @@ jobs:
       - name: Generate unique Docker image tag
         id: version
         run: echo "::set-output name=tag::$(echo ${{ github.run_id }})"
-    
 
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/frontendimage:${{ steps.version.outputs.tag }} .
-          
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend-stage:${{ steps.version.outputs.tag }} .
+
       - name: Login to Docker Hub
         run: |
           echo "Docker Hub username: ${{ secrets.DOCKER_USERNAME }}"
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/frontendimage:${{ steps.version.outputs.tag }}
-
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/easyvsl-stage:${{ steps.version.outputs.tag }}
+        
       - name: chmod
         run: chmod -R +x  scripts/*
 
