--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend-stage:${{ steps.version.outputs.tag }} -f Dockerfile .
+           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend-stage:${{ steps.version.outputs.tag }} -f  Examportal/frontend/Dockerfile .
 
 
       - name: Login to Docker Hub
