--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /usr/frontend
 
 COPY . .
 RUN rm -rf node_modules/ package-lock.json
-Run package.json
+RUN rm -rf node_modules/ package.json
 RUN npm install
 
 RUN npm run build
