--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,11 +4,10 @@ WORKDIR /usr/frontend
 
 COPY . .
 RUN rm -rf node_modules/ package-lock.json
-RUN  package.json
+
+COPY package.json .
 RUN npm install
 
 RUN npm run build
 
-
-CMD ["sh", "-c", "npm start"]
-
+CMD ["npm", "start"]
