--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,10 +4,10 @@ WORKDIR /usr/frontend
 
 COPY . .
 RUN rm -rf node_modules/ package-lock.json
-
-COPY package.json .
+RUN  package.json
 RUN npm install
 
 RUN npm run build
 
-CMD ["npm", "start"]
+
+CMD ["sh", "-c", "npm start"]
