--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,8 @@
 FROM node:13-alpine
-
 WORKDIR /usr/frontend
-
-COPY frontend/package.json frontend/package-lock.json ./
-
+COPY package.json package-lock.json ./
 RUN npm install
-
 RUN rm -rf node_modules/
-
-
 COPY . .
-
 RUN npm run build
-
 CMD ["npm", "start"]
