--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,12 @@
 FROM node:13-alpine
+
 WORKDIR /usr/frontend
-COPY package.json package-lock.json ./
-RUN npm install
-RUN rm -rf node_modules/
+
 COPY . .
+RUN rm -rf node_modules/ package-lock.json
+RUN npm install
+
 RUN npm run build
-CMD ["npm", "start"]
+
+
+CMD ["sh", "-c", "npm start"]
