--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,11 +2,14 @@ FROM node:13-alpine
 
 WORKDIR /usr/frontend
 
-COPY . .
-RUN rm -rf node_modules/ package-lock.json
-RUN npm install
+COPY package.json .  # Copy only package.json first
+COPY package-lock.json .  # Copy package-lock.json if it exists
 
-RUN npm run build
+RUN rm -rf node_modules/  # Remove existing node_modules and package-lock.json
+RUN npm install  # Install dependencies
 
+COPY . .  # Copy the rest of the files
+
+RUN npm run build  # Run build script
 
 CMD ["sh", "-c", "npm start"]
