--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,14 +2,13 @@ FROM node:13-alpine
 
 WORKDIR /usr/frontend
 
-COPY package.json .  # Copy only package.json first
-COPY package-lock.json .  # Copy package-lock.json if it exists
+COPY package.json . 
+COPY package-lock.json . 
 
-RUN rm -rf node_modules/  # Remove existing node_modules and package-lock.json
-RUN npm install  # Install dependencies
+RUN node_modules/ 
+RUN npm install 
+COPY . .  
 
-COPY . .  # Copy the rest of the files
-
-RUN npm run build  # Run build script
+RUN npm run build  
 
 CMD ["sh", "-c", "npm start"]
