--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,10 @@
 FROM node:13-alpine
-
 WORKDIR /usr/frontend
+COPY package.json .  
+COPY package-lock.json .  
 
-COPY package.json . 
-COPY package-lock.json . 
-
-RUN node_modules/ 
-RUN npm install 
-COPY . .  
-
-RUN npm run build  
-
+RUN rm -rf node_modules/ package-lock.json
+COPY . .
+RUN npm install
+RUN npm run build
 CMD ["sh", "-c", "npm start"]
