--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,7 +41,9 @@ jobs:
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Docker image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend:8433843576:${{ steps.version.outputs.tag }}
+        run: |
+               echo "Docker push command: docker push ***/frontend:8433843576:${{ steps.version.outputs.tag }}"
+                docker push ***/frontend:8433843576:${{ steps.version.outputs.tag }}
 
         
       - name: chmod
