--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,4 +47,33 @@ jobs:
       - name: chmod
         run: chmod -R +x  scripts/*
 
+      - name: SSH to Instance
+        env:
+          HOSTNAME: ${{ secrets.SSH_HOST }}
+          USER_NAME: ${{ secrets.USER_NAME }}
+        run: |
+          echo "${{ secrets.SSH_PRIVATEKEY }}" > my-ssh-key.pem
+          chmod 600 my-ssh-key.pem
+
+          # Get the ID of the running container
+          RUNNING_CONTAINER=$(ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} "sudo docker ps --filter \"name=easyvsl-staging\" --format \"{{.ID}}\"")
+
+          if [ -n "$RUNNING_CONTAINER" ]; then
+            echo "Stopping and removing existing container: $RUNNING_CONTAINER"
+            ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} "sudo docker stop $RUNNING_CONTAINER || true"
+            ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} "sudo docker rm $RUNNING_CONTAINER || true"
+          else
+            echo "No existing container found with name: easyvsl-staging"
+          fi
+
+          ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} '
+          sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/easyvsl-stage:${{ steps.version.outputs.tag }}
+          UNIQUE_ID=$(date +%s)
+          CONTAINER_NAME="easyvsl-staging-${UNIQUE_ID}"
+          echo "Starting Docker container..."
+          sudo docker run -d --name $CONTAINER_NAME -p 4000:4000 --env-file ./.env ${{ secrets.DOCKER_USERNAME }}/easyvsl-stage:${{ steps.version.outputs.tag }}
+          echo "Docker container started......."
+          sudo docker image prune -a --force
+
     
