--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,18 +59,18 @@ jobs:
           chmod 600 my-ssh-key.pem
 
           # Get the ID of the running container
-          RUNNING_CONTAINER=$(ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} "sudo docker ps --filter \"name=easyvsl-staging\" --format \"{{.ID}}\"")
+          RUNNING_CONTAINER=$(ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} "sudo docker ps --filter \"frontend-staging\" --format \"{{.ID}}\"")
 
       
-          RUNNING_CONTAINER=$(ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} "sudo docker ps --filter \"name=easyvsl-staging\" --format \"{{.ID}}\"")
+          RUNNING_CONTAINER=$(ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} "sudo docker ps --filter \"name=frontend-staging\" --format \"{{.ID}}\"")
 
           ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} '
           sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/easyvsl-stage:${{ steps.version.outputs.tag }}
           UNIQUE_ID=$(date +%s)
-          CONTAINER_NAME="easyvsl-staging-${UNIQUE_ID}"
+          CONTAINER_NAME="frontend-staging-${UNIQUE_ID}"
           echo "Starting Docker container..."
-          sudo docker run -d --name $CONTAINER_NAME -p 4000:4000 --env-file ./.env ${{ secrets.DOCKER_USERNAME }}/easyvsl-stage:${{ steps.version.outputs.tag }}
+          sudo docker run -d --name $CONTAINER_NAME -p 4000:4000 --env-file ./.env ${{ secrets.DOCKER_USERNAME }}/frontend-stage:${{ steps.version.outputs.tag }}
           echo "Docker container started......."
           sudo docker image prune -a --force
           '
