--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,21 +45,21 @@ jobs:
           chmod 600 my-ssh-key.pem
 
           # Get the ID of the running container
-          RUNNING_CONTAINER=$(ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} "sudo docker ps --filter \"name=frontend-stage\" --format \"{{.ID}}\"")
+          RUNNING_CONTAINER=$(ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} "sudo docker ps --filter \"name=frontend-staging\" --format \"{{.ID}}\"")
 
           if [ -n "$RUNNING_CONTAINER" ]; then
             echo "Stopping and removing existing container: $RUNNING_CONTAINER"
             ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} "sudo docker stop $RUNNING_CONTAINER || true"
             ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} "sudo docker rm $RUNNING_CONTAINER || true"
           else
-            echo "No existing container found with name: frontend-stage"
+            echo "No existing container found with name: frontend-staging"
           fi
 
           ssh -o StrictHostKeyChecking=no -i my-ssh-key.pem $USER_NAME@${HOSTNAME} '
           sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/frontend-stage:${{ steps.version.outputs.tag }}
           UNIQUE_ID=$(date +%s)
-          CONTAINER_NAME="frontend-stage-${UNIQUE_ID}"
+          CONTAINER_NAME="frontend-staging-${UNIQUE_ID}"
           echo "Starting Docker container..."
           sudo docker run -d --name $CONTAINER_NAME -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/frontend-stage:${{ steps.version.outputs.tag }}
           echo "Docker container started......."
