--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -61,7 +61,7 @@ jobs:
           UNIQUE_ID=$(date +%s)
           CONTAINER_NAME="frontend-staging-${UNIQUE_ID}"
           echo "Starting Docker container..."
-          sudo docker run -d --name $CONTAINER_NAME -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/frontend-stage:${{ steps.version.outputs.tag }}
+          sudo docker run -d --name $CONTAINER_NAME -p 3000:3000 ${{ secrets.DOCKERHUB_USERNAME }}/frontend-stage:${{ steps.version.outputs.tag }}
           echo "Docker container started......."
           sudo docker image prune -a --force
           '
